# Zeliard

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: web.yml
asm/: adlib.inc  armrpro.asm  bankpro.asm  build.sh  build_all.sh  churpro.asm  ckpd.asm  common.inc  crab.asm  drugpro.asm  dungeon.inc  eai1.asm  exe2bin.py  fight.asm  game.asm  gdmcga.asm  gdmcga.inc  gfmcga.asm  gmmcga.asm  gtmcga.asm  innapro.asm  kenjpro.asm  kingpro.asm  mole.asm  mole.inc  mscadlib.asm  omoypro.asm  opdemo.asm  rokademo.asm  select.asm  sndadlib.asm  snippet.asm  stick.asm  town.asm  town.inc  ympd.asm  zeliard.asm
assets/grpviewer/v15/: PALETTE.json
docs/: GrpAnalysis.md  MdtAnalysis.md  NpcSpriteAnalysis.md  SpriteGrpAnalysis.md  TownAnalysis.md  TownFidelityAudit.md  collision_analysis.md  common_mcga_ui_and_palette_driver.md  dungeon_and_fight_graphics_drivers.md  dungeon_gameplay_engine.md  global_memory_map_and_data_structures.md  grp_analysis.md  grp_assets_and_graphics_formats.md  information_about_docs_folder.md  mdt_analysis.md  overlays_buildings_inventory_demos_and_ai.md  resource_input_interrupts_and_audio.md  runtime_architecture_and_build.md  town_analysis.md  town_engine_and_town_graphics.md  town_fidelity_audit.md  web_build.md
game/: BROX.USR  BROX1.USR  Bosque.usr  Dorado.usr  Satono.usr  Tumba.usr  instgame.bat  mscadlib.drv  mscjr.drv  mscmt.drv  mscstd.drv  mtinit.com  resource.cfg  sndadlib.drv  sndjr.drv  sndstd.drv
game/0/: BROX.USR  Helada.usr  Pureza.usr  akma.grp  ame.grp  armor.grp  bank.grp  bsmp.mdt  church.grp  cman.grp  cpat.grp  drgn.grp  drmp.mdt  drug.grp  en72.grp  encnt.grp  end4.grp  end5.grp  end6.grp  end7.grp  enp2.grp  enp3.grp  enp4.grp  enp5.grp  enp6.grp  enp7.grp  enp8.grp  esmp.mdt  fin.grp  font.grp  himp.grp  hou.grp  inn.grp  isi.grp  kenjya.grp  lega.grp  llmp.mdt  mao1.grp  mao2.grp  mbos.msd  (+71 more)
src/: zeliard.cpp  zeliard.h  zeliard.hpp
src/grp/: font_grp.cpp  font_grp.hpp  grp_font.cpp  grp_font.h  grp_pattern_bank.cpp  grp_pattern_bank.h  grp_sprite_sheet.cpp  grp_sprite_sheet.h  grp_unpack.cpp  grp_unpack.h  grp_unpacker.cpp  man_grp.cpp  pat_grp.cpp  pat_grp.h
src/hud/: hud_tears_overlay.cpp  hud_tears_overlay.h  mole_panels.cpp  mole_panels.h  mole_panels.hpp  tears.cpp  tears.h  tears.hpp
src/mcga/: mcga_draw.cpp  mcga_draw.h  mcga_draw.hpp  mcga_palette.cpp  mcga_palette.h
src/mdt/: mdt_map.cpp  mdt_map.h  town_mdt.cpp  town_mdt.h  town_mdt.hpp
src/town/: town.cpp  town.h  town.hpp  town_actors.cpp  town_actors.hpp  town_dialog.cpp  town_npc.cpp  town_npc.h  town_render.cpp  town_render.h  town_render.hpp  town_scene.cpp  town_scene.h  town_transitions.cpp  town_transitions.hpp
tools/: bsmp__tile_selections.json  cmap.mdt  cmap_tile_selections.json  dpat.grp  enp1.grp  hlmp.mdt  mp10.mdt  mrmp_tile_selections.json  prmp.mdt  stmp.mdt
tools/grpviewer/: cpat.grp.unp  crab.grp  dchr.grp  dchr.grp.unp  dman.grp  dpat.grp.unp  enp_snippet.asm  fman.grp  grp_viewer.py  grp_viewer_13_1.py  itemp.grp  king.grp  magic.grp  mpat.grp  mpat.grp.unp  mpp1.grp.unp  mpp4.grp  mpp5.grp.unp  mpp6.grp  mpp6.grp.unp  mpp7.grp.unp  mpp8.grp.unp  roca_snippet.asm  roka.grp  split.py  sword.grp  sword.grp.unp  tako.grp  tman.grp
tools/grpviewer/opendemo/: DMAO_SNI.COM  NEC_SNIP.COM  TTL3_SNI.COM  build.sh  dmao_sni.asm  dmaou.grp  hime.grp  maop.grp  nec_snip.asm  sei.grp  ttl1.grp  ttl2.grp  ttl3.grp  ttl3_sni.asm  unp.sh  unpack.py  yuu1.grp  yuu2.grp  yuu3.grp  yuu4.grp  yuup.grp
tools/grpviewer/v15/: DATA.json  PALETTE.json  grp_viewer_15_enp4.py
tools/mdtviewer/: __init__.py  constants.py  models.py  viewer.py
tools/mdtviewer/app/: __init__.py  main_window.py
tools/mdtviewer/archives/: __init__.py  sar_reader.py
tools/mdtviewer/common_ui/: sidebar.py  widgets.py
tools/mdtviewer/core/: __init__.py  constants.py  decoder.py  models.py
tools/mdtviewer/rendering/: __init__.py  map_renderer.py  tile_graphics.py
tools/mdtviewer/viewer_ui/: canvas_panel.py  (+3 more)
tools/sfxripper/: README.md  opldiag.py  ripper.py  ripper_dro.py  sndadlib.asm  testwrite.py
tools/spriteeditor/: __init__.py  __main__.py  decoder.py  mapctx.py  viewer.py  widgets.py
web/: zeliard_shell.html
(+65 files in other folders)
